Checkpoint in configuration group merger implementation

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -626,9 +626,10 @@
 			//setupSpecificConfig("XDAQContextConfiguration","2","setupTableViewMode('anchorTag-XDAQContextConfiguration');"); return;
 
 			//setupSpecificConfigGroup("artdaqFclTest","46","","anchorTag-RawDataSaverConsumerConfiguration"); return;			
-			//setupSpecificConfigGroup("GroupAliasTreeEditWizBackbone","0"); 
+			//setupSpecificConfigGroup("TableEditWizBackbone","0"); 
 			
-			//mergeGroups("GroupAliasTreeEditWizBackbone","0","GroupAliasTreeEditWizBackbone","3","replace");
+			//mergeGroups("TableEditWizBackbone","0","TableEditWizBackbone","3","rename");
+			//mergeGroups("defaultConfig","1","defaultConfig","4","rename");
 			
 			//return;
 			
