Fixed firefox display height difference

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -11763,7 +11763,7 @@
 			//set position and size
 			var gh = 85;
 			var w = 500;
-			var h = 395;
+			var h = 395+30;
 			ConfigurationAPI.setPopUpPosition(el,w /*w*/,h /*h*/,
 					undefined /*padding*/,undefined /*border*/,undefined /*margin*/,undefined /*doNotResize*/,
 					gh*2 /*offsetUp*/);
