Checkpoint for code editor

--- a/WebGUI/html/Chat.html
+++ b/WebGUI/html/Chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Supervisor</title>
+		<title>Chat</title>
 		<style type="text/css">		
 			body {
 				background-color: #CCB399;
