--- a/WebGUI/html/CodeEditor.html
+++ b/WebGUI/html/CodeEditor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>MacroMaker</title>
+		<title>Code Editor</title>
 		
 		<link rel="stylesheet" type="text/css" href="/WebPath/css/ots.css" />
 		<link rel="stylesheet" type="text/css" href="/WebPath/css/MultiSelectBox.css">
