--- a/WebGUI/html/Iterate.html
+++ b/WebGUI/html/Iterate.html
@@ -81,7 +81,7 @@
 </script>
 <head>
 	
-	<title>ConfigurationGUI</title>
+	<title>Iterator</title>
 
 	<link href='/WebPath/css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
 		
