--- a/WebGUI/html/Logbook.html
+++ b/WebGUI/html/Logbook.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Supervisor</title>
+		<title>Logbook</title>
 
 		<link rel="stylesheet" type="text/css" href="/WebPath/css/ots.css">
 		<style type="text/css">			
