--- a/WebGUI/html/SmartLaunch.html
+++ b/WebGUI/html/SmartLaunch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"> 
 <head>
-	<title>ConfigurationGUI</title>
+	<title>Smart Launch</title>
 
 	<link href='/WebPath/css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
 	<link href='/WebPath/css/fonts.css?family=Comfortaa:400' rel='stylesheet' type='text/css'>
