--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"> 
 <head>
-	<title>ConfigurationGUI</title>
+	<title>Table Editor</title>
 
 	<link href='/WebPath/css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/WebPath/css/ConfigurationGUI.css">
