Code editor seems to be fully functional

--- a/WebGUI/html/CodeEditor.html
+++ b/WebGUI/html/CodeEditor.html
@@ -30,6 +30,10 @@
 
 	<body onload='init();'>
 		<!-- Content is filled by JavaScript -->
+		
+		<div class='ConfigurationAPI-popUpDialog-preloadImage' 
+				id='ConfigurationAPI-popUpDialog-preloadImage-editIconHover'>
+		
 	</body>
 	   
 </html>
