Checking in new features: MacroMaker can export directly to FE plugin, web apps can open desktop icons by name

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -894,6 +894,9 @@
 	      <li class="context-menu__item">
 	        <a href="#" class="context-menu__link" data-action="Export"> Export Macro to C++ file</a>
 	      </li>
+		  <li class="context-menu__item">
+			<a href="#" class="context-menu__link" data-action="FEExport"> Export Macro to selected FE plugin</a>
+		  </li>
 	    </ul>
 	  </nav>
 	  <script type="text/JavaScript" src="/WebPath/js/js_lib/ContextMenu.js"></script>
