MacroMaker FEMacro export is fully functional with variables.

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -585,7 +585,7 @@
 		<div class='mainBlock' id='main'>
 	        <h3>Manual Commands</h3>
 	        <div class="center">
-		        <p>Address:  <input type="text" id="addressInput" class="inputBox"/></p>
+		        <p>Address:  <input type="text" id="addressInput" autocomplete="new-password" class="inputBox"/></p>
 		        <div id="output1" class="formatSelection">Address format:
 		           <select id="addressFormat" class="dropdown">
 				    <option class="select" value="hex" selected="selected">hex</option>
@@ -593,7 +593,7 @@
 				    <option class="select" value="ascii">ascii</option>
 				   </select>
 				</div>
-		        <p>Data:  <input style="margin-left:23px" type="text" id="dataInput" class="inputBox"/></p>
+		        <p>Data:  <input style="margin-left:23px" type="text" id="dataInput" autocomplete="new-password" class="inputBox"/></p>
 		        <div id="output2" class="formatSelection">Data format:
 		           <select style="margin-left:23px" id="dataFormat" class="dropdown">
 				    <option class="select" value="hex" selected="selected">hex</option>
@@ -639,7 +639,7 @@
 		<div class='mainBlock' id='maker'>
 	        <h3>Macro Maker</h3>
 	        <div class="center">
-	            <p>Address:  <input type="text" id="macroAddressInput" class="inputBox"/></p>
+	            <p>Address:  <input type="text" id="macroAddressInput" autocomplete="new-password" class="inputBox"/></p>
 		        <div id="macroFormat1" class="formatSelection">Address format:
 		           <select id="macroAddressFormat" class="dropdown">
 				    <option class="select" value="hex" selected="selected">hex</option>
@@ -647,7 +647,7 @@
 				    <option class="select" value="ascii">ascii</option>
 				   </select>
 				</div>
-		        <p>Data:  <input style="margin-left:23px" type="text" id="macroDataInput" class="inputBox"/></p>
+		        <p>Data:  <input style="margin-left:23px" type="text" id="macroDataInput" autocomplete="new-password" class="inputBox"/></p>
 		        <div id="macroFormat2" class="formatSelection">Data format:
 		           <select style="margin-left:23px" id="macroDataFormat" class="dropdown">
 				    <option class="select" value="hex" selected="selected">hex</option>
@@ -899,7 +899,7 @@
 		  </li>
 	    </ul>
 	  </nav>
-	  <script type="text/JavaScript" src="/WebPath/js/js_lib/ContextMenu.js"></script>
+	  <script type="text/JavaScript" src="/WebPath/js/js_lib/MacroMakerContextMenu.js"></script>
 	</body>
 	   
 </html>
