Fixed bug in FEVInterfacesManager which was accessing FE interfaces with Status = false

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -102,6 +102,7 @@
 		    color: #001626;  
         	margin: 0 5px 0 5px;
         	display: inline;
+        	cursor: pointer;
 		}
 		
 		#historyContent {
